# smart-nippo

./: .gitignore  README.md  pyproject.toml
docs/architecture/: CLIライブラリとインタラクティブ機能の比較.md  CLI配布方法の比較検討.md  Python開発エコシステムの検討.md  Python開発エコシステム見直し.md  uv中心の最小限開発構成.md  エディタ連携の実装比較.md  クリップボードライブラリ詳細比較.md  クリップボード操作の実装比較.md  クロスプラットフォーム対応の比較.md  バイナリ実行時の依存関係.md  技術選定.md  機能別言語選択肢まとめ.md
docs/architecture/ADR/: 001-python-cli-technology-stack.md  002-python-development-ecosystem.md
docs/requirement/: naming_direction.md  todo.md  user_proposed_features.md  マネタイズ戦略とビジネスモデル.md  ユーザー提案機能の評価と改善点.md  技術アーキテクチャと実装戦略.md  日報入力支援サービス ビジネスプランレポート.md  日報入力支援サービス 命名案.md  機能拡張とサービス展開の戦略.md
docs/spec/: functional_specification.md
plans/: phase1_implementation_plan.md
src/smart_nippo/: __init__.py
src/smart_nippo/cli/: __init__.py  main.py
src/smart_nippo/cli/commands/: clipboard.py  editor.py  hello.py  report.py  template.py
src/smart_nippo/cli/interactive/: __init__.py  input_handlers.py
src/smart_nippo/cli/utils/: __init__.py
src/smart_nippo/core/: __init__.py  config.py  validators.py
src/smart_nippo/core/database/: __init__.py  init.py  models.py  session.py
src/smart_nippo/core/models/: __init__.py  _init_models.py  field_types.py  project.py  report.py  template.py
src/smart_nippo/core/services/: __init__.py  (+2 more)
src/smart_nippo/integrations/: __init__.py
tests/: test_clipboard.py  test_config.py  test_database.py  test_hello.py  test_main.py  test_models.py
tests/core/services/: __init__.py  test_report_service.py  test_template_service.py
